# fantasy-football

./: .gitignore  CLAUDE.md  CSG Fantasy Football Sheet - 2025 v13.01.csv  DASHBOARD_README.md  Dockerfile  IMPLEMENTATION_PLAN.md  MONTE_CARLO_DETAILED_IMPROVEMENT_PLAN.md  OSS_INTEGRATION_PLAN.md  PHASE_A_IMPLEMENTATION.md  PROBABILITY_METHOD_DETAILED.md  QUICKSTART.md  README.md  VBD_TABLE_REQUIREMENTS.md  WIDGET_FIX_SUMMARY.md  analyze_projections.ipynb  backup_draft.py  backup_draft_simplified.py  claude-code-complex-architecture-workflow.md  debug_dynamic_vbd.py  docker-compose.yml  draft_board_app.py  draft_cheat_sheet.csv  dynamic_fantasy_draft_optimizer_high_level_spec.md  espn-probability-plan.md  espn_probability_matrix.ipynb  fantasy_football_advanced_visualizations.ipynb  final_dynamic_vbd_test.py  implement_dynamic_vbd_fix.py  live_draft_tracker.py  monte_carlo_runner.py  pyproject.toml  requirements.txt  requirements_draft_board.txt  run_tests.py  scrape_projections.py  starter_optimizer_fixes_summary.md  test_backup_draft_integration.py  test_parameter_tuning.py  test_simple_integration.py  verify_dynamic_vbd_working.py
.claude/: CLAUDE.md
.ipynb_checkpoints/: CSG Fantasy Football Sheet - 2025 v13.01-checkpoint.csv  fantasy_football_analysis-checkpoint.ipynb  rb-wr-decision-matrix-checkpoint.md
api/: main.py
config/: league-config-simplified.yaml  league-config.yaml
data/: espn_projections_20250814.csv  fantasypros_adp_20250815.csv  pre_draft_playbook_pick5_20250819_161352.markdown  pre_draft_playbook_pick5_20250819_161638.markdown  (+7 more)
docs/: README.md  (+24 more)
(+153 files in other folders)
